[gd_scene load_steps=2 format=3 uid="uid://cyuay3jm1jqsg"]

[ext_resource type="Script" path="res://scenes/char_creation.gd" id="1_wsdsl"]

[node name="CharCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wsdsl")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 32.0
offset_right = 960.0
offset_bottom = 63.0
item_count = 4
popup/item_0/text = "Daxi"
popup/item_0/id = 0
popup/item_1/text = "Yarmukian"
popup/item_1/id = 1
popup/item_2/text = "Faiyum"
popup/item_2/id = 2
popup/item_3/text = "Vinca"
popup/item_3/id = 3

[node name="Panel" type="Panel" parent="OptionButton"]
layout_mode = 0
offset_left = -184.0
offset_top = 32.0
offset_right = 312.0
offset_bottom = 288.0

[node name="Label" type="Label" parent="OptionButton"]
layout_mode = 0
offset_left = -80.0
offset_top = 8.0
offset_bottom = 34.0
text = "Culture:"

[node name="MessageLbl" type="Label" parent="OptionButton"]
layout_mode = 0
offset_left = -184.0
offset_top = 32.0
offset_right = 312.0
offset_bottom = 288.0
autowrap_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 488.0
offset_bottom = 184.0
text = "It is the middle Stone Age. You are leading a tribe of your culture for survival. You will start by foraging and connecting with nature. With time, you and your clan will settle down and create one of the greatest empires ever known, or fall out of memory as an unknown tribe."
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 192.0
offset_right = 488.0
offset_bottom = 336.0
text = "You must contend with hunger, loyalty, natural disasters, weather and even enemies both foreign and domestic. Your hand will guide rulers to their glory or doom, and with them will shape the people you rule."
autowrap_mode = 2

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 384.0
offset_right = 488.0
offset_bottom = 424.0
text = "Choose a culture and begin your journey..."
autowrap_mode = 2

[node name="StartGameBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1040.0
offset_top = 592.0
offset_right = 1140.0
offset_bottom = 623.0
text = "Start Game!"

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="StartGameBtn" to="." method="_on_start_game_btn_pressed"]
